# pyfarm-protocols

./: README.md  pyproject.toml
protocols/microgreens/alfalfa/v1/: growspec.yaml
protocols/microgreens/broccoli/v1/: growspec.yaml
protocols/microgreens/pea-shoots/v1/: growspec.yaml
protocols/microgreens/radish/v1/: growspec.yaml
protocols/microgreens/sunflower/v1/: growspec.yaml
protocols/mushroom/lions-mane/v1/: growspec.yaml
protocols/mushroom/oyster-grey/v1/: growspec.yaml
protocols/mushroom/shiitake/v1/: growspec.yaml
src/pyfarm/protocols/: __init__.py  loader.py
tests/: conftest.py  test_loader.py
