[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-protocols"
version = "0.1.0"
description = "Versioned, shareable GrowSpec library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
